  a Model-View approach, in com.blackrook.commons.index.
- Added: Addt'l methods to Vect2D, Vect2F for setting vector components.
- Added: Addt'l convenience methods to LoggingFactory.
- Added: a series of vector/line calculations. The Tuple* classes point to 
  these methods now for relevant calculations.
- Added: Reflect.getPublicFields(Object, boolean) for excluding static members.

Changed in 2.20.2
=================

- Fixed: AbstractTrie returned incorrect information on getAfter() when it
  had no path in the Trie to take.

Changed in 2.20.1
=================

- Changed: Method annotations and javadoc tweaks. 

Changed in 2.20.0
=================

- Added: AbstractTrie<?,?,?> for implementing a Trie data structure and 
  lookup map.
- Added: Package com.blackrook.commons.trie.
- Added: Common.joinStrings(String, String... )
- Added: Common.joinStrings(String, Iterable<String>)
- Added: Common.joinStrings(int, String, String... )
- Changed: Made equality methods in sets and hashes more thorough to test for
  null combinations.
- Added/Fixed: Javadoc package names for building logger package javadocs.
- Added: Reflect.mapToNewObject(AbstractMap/Map<String, ?>, Class) and
  Reflect.mapToObject(AbstractMap/Map<String, ?>, T).
- Added: Reflect.construct(Constructor, Object ...)
- Added: TypeProfile.getGetterMethods(), getAnnotatedPublicFields(),
  getAnnotatedGetters(), getAnnotatedSetters().
- Changed: toString() methods on some data structures.
- Added: Common.openResource().
- Added/Fixed: Reflect.createForType() now recognizes superclasses of input
  objects and will not convert them (it will cast them).
- Changed: Reflect.createForType() can convert single-character-strings to 
  characters.
- Added: Hash.union(?,?), Hash.intersection(?,?), Hash.difference(?,?), and
  Hash.xor(?,?) for set manipulation for all Hashes. 
- Created: An instantiatable version of Singleton called SingletonManager.
- Deprecated: Singleton, since SingletonManager exists.