@@ -13,6 +13,7 @@ Slated for 2.21.0
 - Added: a series of vector/line calculations. The Tuple* classes point to 
   these methods now for relevant calculations.
 - Added: Reflect.getPublicFields(Object, boolean) for excluding static members.
+- Changed: Reflect.getEnumInstance() is now public.
 
 Changed in 2.20.2
 =================
